--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,3 +69,21 @@ button:hover {
 .auth-button:hover {
   background-color: var(--home-button-selected);
 }
+
+.tripType-button:hover{
+  background-color: #B5531D;
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+
+.tripType-button {
+  background-color: #df6523;
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
