styling to have input box labels above input box

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,3 +105,10 @@ button:hover {
   margin-top: 8rem;
   margin-left: 4rem;
 }
+.search-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  margin-top: 1rem;
+}
