--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -141,6 +141,18 @@ button:hover {
   background-color: #136f6c;
 }
 
+.hotel-room-card {
+  background-color: #ffffff;
+  color: #000000;
+  padding: 2rem;
+  border: #000000;
+  margin-bottom: 1rem; /* Add margin-bottom to create a gap between hotel cards */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; /* Center the content inside each card */
+}
+
 .flight-card {
   background-color: #ffffff;
   color: #000000;
