--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -148,9 +148,19 @@ button:hover {
   border: #000000;
   margin-bottom: 1rem; /* Add margin-bottom to create a gap between hotel cards */
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: left;
   align-items: center; /* Center the content inside each card */
+}
+
+.hotel-info-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  margin-left: 1rem; /* Equivalent to ml-4 in Tailwind */
+  align-items: center;
+  max-height: 16.67vh;
+  overflow: hidden;
 }
 
 .flight-card {
