--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -146,7 +146,7 @@ button:hover {
   color: #000000;
   padding: 2rem;
   border: #000000;
-  margin-bottom: 1rem; /* Add margin-bottom to create a gap between hotel cards */
+  margin: 0.5rem; /* Add margin-bottom to create a gap between hotel cards */
   display: flex;
   flex-direction: row;
   justify-content: left;
@@ -154,13 +154,18 @@ button:hover {
 }
 
 .hotel-info-card {
+  background-color: #ffffff;
+  color: #000000;
+  padding: 2rem;
+  border: #000000;
   display: flex;
   flex-direction: row;
   justify-content: left;
-  margin-left: 1rem; /* Equivalent to ml-4 in Tailwind */
+  margin: 0.5rem; /* Equivalent to ml-4 in Tailwind */
   align-items: center;
-  max-height: 16.67vh;
+  max-height: 33.33vh;
   overflow: hidden;
+  border-radius: 0.5rem; /* Add rounded corners to the hotel-info-card */
 }
 
 .flight-card {
